--- a/popup/popup.html
+++ b/popup/popup.html
@@ -32,6 +32,10 @@
         Dölj dubbletter
       </label>
       <label class="inline">
+        <input type="checkbox" id="allowNoExtension" />
+        Tillåt bilder utan filändelse
+      </label>
+      <label class="inline">
         <input type="checkbox" id="removeBgHeuristic" checked />
         Ta bort bakgrund (heuristik)
       </label>
