--- a/popup/popup.html
+++ b/popup/popup.html
@@ -24,7 +24,7 @@
         <input type="checkbox" id="askWhere" />
         Fråga var jag vill spara
       </label>
-      <button id="saveBtn" class="primary" type="button">Spara valda</button>      
+      <button id="saveBtn" class="primary" type="button">Spara valda</button>
     </div>
 
     <div class="right">
@@ -63,6 +63,15 @@
   </section>
 
   <section id="grid" class="grid"></section>
+
+  <footer class="footer">
+    <div class="footer-left">
+      <span id="countFooter" class="inline"></span>
+    </div>
+    <div class="footer-right">
+      <button id="saveBtnFooter" class="primary" type="button">Spara valda</button>
+    </div>
+  </footer>
 
   <script src="popup.js"></script>
 </body>
