More mega changes

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -45,6 +45,12 @@
         Ta bort bakgrund (heuristik)
       </label>
     </div>
+    <div class="sort-row">
+      <label class="inline">
+        <input type="checkbox" id="sortBySize" />
+        Sortera på storlek (störst först)
+      </label>
+    </div>
   </section>
 
   <section class="settings">
